<resources>
    <string name="app_name">CarWarehouse</string>
    <string name="maker">Maker</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="seats">Seats</string>
    <string name="price">Price</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

    <string name="op_menu_1">clear field</string>

</resources>