<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_info_form_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/car_info_form_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_maker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/maker"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_maker"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_model"
        app:layout_constraintEnd_toEndOf="@+id/tv_maker"
        app:layout_constraintStart_toStartOf="@+id/tv_maker" />

    <TextView
        android:id="@+id/tv_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_year"
        app:layout_constraintEnd_toEndOf="@+id/tv_model"
        app:layout_constraintStart_toStartOf="@+id/tv_model" />

    <TextView
        android:id="@+id/tv_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_color"
        app:layout_constraintEnd_toEndOf="@+id/tv_year"
        app:layout_constraintStart_toStartOf="@+id/tv_year" />

    <TextView
        android:id="@+id/tv_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seats"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_seats"
        app:layout_constraintEnd_toEndOf="@+id/tv_color"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tv_color" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        app:layout_constraintBaseline_toBaselineOf="@+id/et_price"
        app:layout_constraintEnd_toEndOf="@+id/tv_seats"
        app:layout_constraintStart_toStartOf="@+id/tv_seats" />

    <EditText
        android:id="@+id/et_maker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:autofillHints="@string/maker"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toEndOf="@+id/tv_maker"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:autofillHints="@string/model"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/et_maker"
        app:layout_constraintTop_toBottomOf="@+id/et_maker" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="@string/year"
        app:layout_constraintStart_toStartOf="@+id/et_model"
        app:layout_constraintTop_toBottomOf="@+id/et_model" />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:autofillHints="@string/color"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/et_year"
        app:layout_constraintTop_toBottomOf="@+id/et_year" />

    <EditText
        android:id="@+id/et_seats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="0"
        app:layout_constraintStart_toStartOf="@+id/et_color"
        app:layout_constraintTop_toBottomOf="@+id/et_color" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:autofillHints="0"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/et_seats"
        app:layout_constraintTop_toBottomOf="@+id/et_seats" />

        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@id/et_price"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>